# place_start_testovoe_task

./: .gitignore  README.md  pyproject.toml
place_todo/: db.sqlite3  manage.py
place_todo/place_todo/: asgi.py  settings.py  urls.py  wsgi.py
place_todo/templates/: index.html
place_todo/todo/: models.py  urls.py  views.py
place_todo/todo/migrations/: 0001_initial.py  0002_alter_task_options.py
