[tool.poetry]
name = "place-start"
version = "0.1.0"
description = ""
authors = ["Dev-cmyser <cmyser.fast@mail.ru>"]
readme = "README.md"
packages = [{include = "place_start"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
